Refactor changes